--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,8 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "api/socket.js", "use": "@vercel/node" },
-    { "src": "public/**/*", "use": "@vercel/static" }
-  ],
-  "routes": [
-    { "src": "/api/socket", "dest": "/api/socket.js" },
-    { "src": "/(.*)", "dest": "/public/$1" }
+  "rewrites": [
+    {
+      "source": "/(.*)",
+      "destination": "/api/socket"
+    }
   ]
 }
