Fix: Add module type for ESM compatibility

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "chat-vercel",
   "version": "1.0.0",
+  "type": "module",
   "main": "api/socket.js",
   "dependencies": {
     "socket.io": "^4.7.2"
